| Summary: | ASTERISK-26524: astobj2: data_size variable is wasted space when AO2_DEBUG is not enabled. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-10-29 10:25:17 | Date Closed: | 2016-10-31 10:14:09 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/AstMM |
| Versions: | 13.12.1 14.1.1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Every AO2 object has a variable 'size_t data_size' in it's private structure. This is normally a waste of memory since the variable is only needed when AO2_DEBUG is enabled. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-29 10:25:17.317-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2016-10-29 10:27:33.218-0500 Change 4231 had a related patch set uploaded by Corey Farrell: astobj2: Declare private variable data_size for AO2_DEBUG only. [https://gerrit.asterisk.org/4231|https://gerrit.asterisk.org/4231] By: Friendly Automation (friendly-automation) 2016-10-29 10:29:02.881-0500 Change 4232 had a related patch set uploaded by Corey Farrell: astobj2: Declare private variable data_size for AO2_DEBUG only. [https://gerrit.asterisk.org/4232|https://gerrit.asterisk.org/4232] By: Friendly Automation (friendly-automation) 2016-10-29 10:32:56.988-0500 Change 4233 had a related patch set uploaded by Corey Farrell: astobj2: Declare private variable data_size for AO2_DEBUG only. [https://gerrit.asterisk.org/4233|https://gerrit.asterisk.org/4233] By: Friendly Automation (friendly-automation) 2016-10-31 10:14:09.648-0500 Change 4233 merged by zuul: astobj2: Declare private variable data_size for AO2_DEBUG only. [https://gerrit.asterisk.org/4233|https://gerrit.asterisk.org/4233] By: Friendly Automation (friendly-automation) 2016-10-31 11:03:11.812-0500 Change 4232 merged by Joshua Colp: astobj2: Declare private variable data_size for AO2_DEBUG only. [https://gerrit.asterisk.org/4232|https://gerrit.asterisk.org/4232] By: Friendly Automation (friendly-automation) 2016-10-31 11:35:39.902-0500 Change 4231 merged by zuul: astobj2: Declare private variable data_size for AO2_DEBUG only. [https://gerrit.asterisk.org/4231|https://gerrit.asterisk.org/4231] | ||